--- a/Components/Pages/page2.html
+++ b/Components/Pages/page2.html
@@ -2,9 +2,12 @@
 <html>
   <head>
     <title>Page 2</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
     <script type="text/javascript" src="script.js"></script>
   </head>
+
   <body>
     <nav>
       <a href=".././index.html">Home</a>
